--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <div class="navbar">
-        <div id="nav1" class="navs"><a href="/about.html"><img src="/img/logo.jfif" alt=""></a></div>
+        <div id="nav1" class="navs"><a href="/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
         <div id="nav2" class="navs">
-            <a href="#"><img src="/img/facebook.png" alt=""></a>
-            <a href="https://www.instagram.com/mikki_verma_/"><img src="/img/instagram.png" alt=""></a>
-            <a href="https://twitter.com/MuKuL_vErMa_"><img src="/img/twitter.png" alt=""></a>
-            <a href="mailto:mikkiverma0311@gmail.com" target="_blank"><img src="/img/gmail.png"
+            <a href="#"><img src="/pro/img/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/mikki_verma_/"><img src="/pro/img/instagram.png" alt=""></a>
+            <a href="https://twitter.com/MuKuL_vErMa_"><img src="/pro/img/twitter.png" alt=""></a>
+            <a href="mailto:mikkiverma0311@gmail.com" target="_blank"><img src="/pro/img/gmail.png"
                     alt="mailto:mukulpopper@gmail.com"></a>
         </div>
     </div>
