--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUKUL VERMA</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/pro/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
     <div class="navbar">
-        <div id="nav1" class="navs"><a href="/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
+        <div id="nav1" class="navs"><a href="/pro/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
         <div id="nav2" class="navs">
             <a href="#"><img src="/pro/img/facebook.png" alt=""></a>
             <a href="https://www.instagram.com/mikki_verma_/"><img src="/pro/img/instagram.png" alt=""></a>
