--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="midimg">
 
-            <img src="/img/image.jpg" alt="">
+            <img src="/pro/img/image.jpg" alt="">
 
         </div>
         <div class="midright">
