--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="navbar">
-        <div id="nav1" class="navs"><a href="/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
+        <div id="nav1" class="navs"><a href="/pro/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
         <div id="nav2" class="navs">
-            <a href=""><img src="/pro/img/facebook.png" alt=""></a>
+            <a href="#"><img src="/pro/img/facebook.png" alt=""></a>
             <a href="https://www.instagram.com/mikki_verma_/"><img src="/pro/img/instagram.png" alt=""></a>
             <a href="https://twitter.com/MuKuL_vErMa_"><img src="/pro/img/twitter.png" alt=""></a>
             <a href="mailto:mukulpopper@gmail.com"><img src="/pro/img/gmail.png" alt="mailto:mukulpopper@gmail.com"></a>
