--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div id="nav1" class="navs"><a href="/pro/about.html"><img src="/pro/img/logo.jfif" alt=""></a></div>
+        <div id="nav1" class="navs"><a href="/pro/about.html"><img src="/pro/img/logo.jfif" alt="#"></a></div>
         <div id="nav2" class="navs">
             <a href="#"><img src="/pro/img/facebook.png" alt=""></a>
             <a href="https://www.instagram.com/mikki_verma_/"><img src="/pro/img/instagram.png" alt=""></a>
